# Markov-Based-Simulations

./: CMakeLists.txt  README.md  linked_list.c  main.c  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
